--- a/ITIGraduation/Views/Boots/Edit.cshtml
+++ b/ITIGraduation/Views/Boots/Edit.cshtml
@@ -1,1 +1,39 @@
-﻿<h1>boots Edit</h1>
+﻿@model ITIGraduation.Models.Boot
+
+<div class="product_page" id="ProductView">
+    @{
+        ViewData["Title"] = "Edit Boot";
+    }
+
+    <h2>Edit Boot</h2>
+
+    <form asp-action="Edit">
+        <input type="hidden" asp-for="BootId" />
+
+        <div class="form-group">
+            <label asp-for="BootName"></label>
+            <input asp-for="BootName" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Size"></label>
+            <input asp-for="Size" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Price"></label>
+            <input asp-for="Price" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="ImagUrl"></label>
+            <input asp-for="ImagUrl" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-warning">Save Changes</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
+
+
+</div>
+
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
