--- a/ITIGraduation/Views/Sports/Edit.cshtml
+++ b/ITIGraduation/Views/Sports/Edit.cshtml
@@ -1,1 +1,40 @@
-﻿<h1>Sport Edit</h1>
+﻿@model ITIGraduation.Models.Sport
+
+<div class="product_page" id="ProductView">
+    @{
+        ViewData["Title"] = "Edit Sport";
+    }
+
+    <h2>Edit Sport</h2>
+
+    <form asp-action="Edit">
+        <input type="hidden" asp-for="SportId" />
+
+        <div class="form-group">
+            <label asp-for="SportName"></label>
+            <input asp-for="SportName" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Size"></label>
+            <input asp-for="Size" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Price"></label>
+            <input asp-for="Price" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="ImagUrl"></label>
+            <input asp-for="ImagUrl" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-warning">Save Changes</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+       
+    </form>
+
+    </div>
+
+
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
