--- a/ITIGraduation/Views/TrendingSellings/Details.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ITIGraduation.Models.Sport
+﻿@model ITIGraduation.Models.TrendingSelling
 
 @{
     ViewData["Title"] = "SportDetails";
@@ -13,26 +13,26 @@
                 <img class="active"
                      src="@Url.Content(Model.ImagUrl)"
                      alt="product-img" />
-                <img src="@Url.Content(Model.ImagUrl)" alt="product-img" />
-                <img src="@Url.Content(Model.ImagUrl)" alt="product-img" />
-                <img src="@Url.Content(Model.ImagUrl)" alt="product-img" />
+                <img src="@Url.Content(Model.Imag2)" alt="product-img" />
+                <img src="@Url.Content(Model.Imag3)" alt="product-img" />
+                <img src="@Url.Content(Model.Imag4)" alt="product-img" />
             </div>
             <div class="thumb-list">
                 <div class="active">
                     <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProudName)" />
                 </div>
                 <div>
-                    <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                    <img src="@Url.Content(Model.Imag2)"
+                         alt="@Url.Content(Model.ProudName)" />
                 </div>
                 <div>
-                    <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                    <img src="@Url.Content(Model.Imag3)"
+                         alt="@Url.Content(Model.ProudName)" />
                 </div>
                 <div>
-                    <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                    <img src="@Url.Content(Model.Imag4)"
+                         alt="@Url.Content(Model.ProudName)" />
                 </div>
             </div>
         </div>
@@ -44,27 +44,27 @@
                     <!-- main images -->
                     <img class="active"
                          src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
-                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.SportName)" />
-                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.SportName)" />
-                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProudName)" />
+                    <img src="@Url.Content(Model.Imag2)" alt="@Url.Content(Model.ProudName)" />
+                    <img src="@Url.Content(Model.Imag3)" alt="@Url.Content(Model.ProudName)" />
+                    <img src="@Url.Content(Model.Imag4)" alt="@Url.Content(Model.ProudName)" />
                 </div>
                 <div class="thumb-list">
                     <div class="active">
                         <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                             alt="@Url.Content(Model.ProudName)" />
                     </div>
                     <div>
-                        <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                        <img src="@Url.Content(Model.Imag2)"
+                             alt="@Url.Content(Model.ProudName)" />
                     </div>
                     <div>
-                        <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                        <img src="@Url.Content(Model.Imag3)"
+                             alt="@Url.Content(Model.ProudName)" />
                     </div>
                     <div>
-                        <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                        <img src="@Url.Content(Model.Imag4)"
+                             alt="@Url.Content(Model.ProudName)" />
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 
         <div class="content">
             <h3></h3>
-            <h2 class="product-name">@Url.Content(Model.SportName)</h2>
+            <h2 class="product-name">@Url.Content(Model.ProudName)</h2>
             <p class="product-desc">
                 These low-profile sneakers are your perfect casual wear companion.
                 Featuring a durable rubber outer sole, they’ll withstand everything
