--- a/ITIGraduation/Views/Products/Details.cshtml
+++ b/ITIGraduation/Views/Products/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ITIGraduation.Models.Sport
+﻿@model ITIGraduation.Models.Prouduct
 
 @{
     ViewData["Title"] = "SportDetails";
@@ -20,19 +20,19 @@
             <div class="thumb-list">
                 <div class="active">
                     <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProuductName)" />
                 </div>
                 <div>
                     <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProuductName)" />
                 </div>
                 <div>
                     <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProuductName)" />
                 </div>
                 <div>
                     <img src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProuductName)" />
                 </div>
             </div>
         </div>
@@ -44,27 +44,27 @@
                     <!-- main images -->
                     <img class="active"
                          src="@Url.Content(Model.ImagUrl)"
-                         alt="@Url.Content(Model.SportName)" />
-                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.SportName)" />
-                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.SportName)" />
-                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.SportName)" />
+                         alt="@Url.Content(Model.ProuductName)" />
+                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.ProuductName)" />
+                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.ProuductName)" />
+                    <img src="@Url.Content(Model.ImagUrl)" alt="@Url.Content(Model.ProuductName)" />
                 </div>
                 <div class="thumb-list">
                     <div class="active">
                         <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                             alt="@Url.Content(Model.ProuductName)" />
                     </div>
                     <div>
                         <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                             alt="@Url.Content(Model.ProuductName)" />
                     </div>
                     <div>
                         <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                             alt="@Url.Content(Model.ProuductName)" />
                     </div>
                     <div>
                         <img src="@Url.Content(Model.ImagUrl)"
-                             alt="@Url.Content(Model.SportName)" />
+                             alt="@Url.Content(Model.ProuductName)" />
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 
         <div class="content">
             <h3></h3>
-            <h2 class="product-name">@Url.Content(Model.SportName)</h2>
+            <h2 class="product-name">@Url.Content(Model.ProuductName)</h2>
             <p class="product-desc">
                 These low-profile sneakers are your perfect casual wear companion.
                 Featuring a durable rubber outer sole, they’ll withstand everything
