--- a/ITIGraduation/Views/Sports/Delete.cshtml
+++ b/ITIGraduation/Views/Sports/Delete.cshtml
@@ -1,1 +1,31 @@
-﻿<h1>Sport Delete</h1>
+﻿@model ITIGraduation.Models.Sport
+
+<div class="product_page" id="ProductView">
+    @{
+        ViewData["Title"] = "Delete Sport";
+    }
+
+    <h2>Are you sure you want to delete this sport?</h2>
+
+    <div>
+        <h4>@Model.SportName</h4>
+        <dl class="row">
+            <dt class="col-sm-2">Size</dt>
+            <dd class="col-sm-10">@Model.Size</dd>
+
+            <dt class="col-sm-2">Price</dt>
+            <dd class="col-sm-10">@Model.Price</dd>
+
+            <dt class="col-sm-2">Image</dt>
+            <dd class="col-sm-10">@Model.ImagUrl</dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="SportId" />
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
+
+</div>
+
