--- a/ITIGraduation/Views/TrendingSellings/Create.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Create.cshtml
@@ -1,12 +1,16 @@
-﻿@model ITIGraduation.Models.Sport
+﻿@model ITIGraduation.Models.TrendingSelling
 
 <div class="product_page" id="ProductView">
-    <h2>Create Sport</h2>
+    @{
+        ViewData["Title"] = "Create Trending Product";
+    }
+
+    <h2>Create Trending Product</h2>
 
     <form asp-action="Create">
         <div class="form-group">
-            <label asp-for="SportName"></label>
-            <input asp-for="SportName" class="form-control" />
+            <label asp-for="ProudName"></label>
+            <input asp-for="ProudName" class="form-control" />
         </div>
         <div class="form-group">
             <label asp-for="Size"></label>
@@ -20,10 +24,24 @@
             <label asp-for="ImagUrl"></label>
             <input asp-for="ImagUrl" class="form-control" />
         </div>
+        <div class="form-group">
+            <label asp-for="Imag2"></label>
+            <input asp-for="Imag2" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Imag3"></label>
+            <input asp-for="Imag3" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Imag4"></label>
+            <input asp-for="Imag4" class="form-control" />
+        </div>
         <button type="submit" class="btn btn-success">Create</button>
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
 
+
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
