--- a/ITIGraduation/Views/TrendingSellings/Delete.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model ITIGraduation.Models.Boot
+﻿@model ITIGraduation.Models.TrendingSelling
 
 <div class="product_page" id="ProductView">
     @{
-        ViewData["Title"] = "Delete Boot";
+        ViewData["Title"] = "Delete Trending Product";
     }
 
-    <h2>Are you sure you want to delete this boot?</h2>
+    <h2>Are you sure you want to delete this trending product?</h2>
 
     <div>
-        <h4>@Model.BootName</h4>
+        <h4>@Model.ProudName</h4>
         <dl class="row">
             <dt class="col-sm-2">Size</dt>
             <dd class="col-sm-10">@Model.Size</dd>
@@ -21,10 +21,11 @@
         </dl>
 
         <form asp-action="Delete">
-            <input type="hidden" asp-for="BootId" />
+            <input type="hidden" asp-for="ProudId" />
             <button type="submit" class="btn btn-danger">Delete</button>
             <a asp-action="Index" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
+
 
 </div>
