--- a/ITIGraduation/Views/TrendingSellings/Index.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Index.cshtml
@@ -3,15 +3,27 @@
 @{
     ViewData["Title"] = "SportDetails";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
+
+@{
+    var isAdmin = User.IsInRole("Admin");
+}
+
 
 <link rel="stylesheet" href="~/style.css" asp-append-version="true" />
 
 <div class="product_page" id="ProductView">
     <h1>Trending Sellings</h1>
+    @if (isAdmin)
+    {
+        <p>
+            <a asp-action="Create" class="btn btn-primary mb-3">+ Add Product</a>
+        </p>
+    }
 
-    <p>
-        <a asp-action="Create" class="btn btn-primary mb-3">+ Add Product</a>
-    </p>
+    
     <div class="product-grid row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
 
         @foreach (var item in Model)
@@ -59,9 +71,12 @@
 
                     </div>
                     <div class="btnsFromMe">
+                        @if (isAdmin)
+                        {
                         <a asp-action="Edit" asp-route-id="@item.ProudId" class="btn Edit text-white ">Edit</a>
                         <a asp-action="Details" asp-route-id="@item.ProudId" class="btn Details text-white">Details</a>
                         <a asp-action="Delete" asp-route-id="@item.ProudId" class="btn Delete text-white ">Delete</a>
+                        }
                     </div>
                 </div>
 
