--- a/ITIGraduation/Views/Shared/_Layout.cshtml
+++ b/ITIGraduation/Views/Shared/_Layout.cshtml
@@ -300,7 +300,7 @@
                                         <a href="/Home/index" class="nav-link">Home</a>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a href="/Home#trending" class="nav-link">Trending</a>
+                                        <a href="/TrendingSellings/index#ProductView" class="nav-link">Trending</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="/Boots/index#ProductView" class="nav-link">Boots</a>
@@ -472,7 +472,7 @@
                         <div class="banner-content p-5">
 
                             <div class="fs-6 pt-5">Upto 25% Off</div>
-                            <h3 class="banner-title">Best Selling</h3>
+                            <h3 class="banner-title">Trending Products</h3>
                             <a href="/TrendingSellings/Index#ProductView" class="btn btn-dark text-uppercase">Show Now</a>
 
                         </div>
