--- a/ITIGraduation/Views/Home/Index.cshtml
+++ b/ITIGraduation/Views/Home/Index.cshtml
@@ -12,11 +12,19 @@
 
 <section id="trending" class="py-5">
     <div class="container-fluid">
+        <h3>Trending Products</h3>
+
 
         <div class="row">
             <div class="col-md-12">
 
-                <h3>Trending Products</h3>
+                @if (isAdmin)
+                {
+                    <p>
+                        <a asp-action="Create" class="btn btn-primary mb-3">+ Add Product</a>
+                    </p>
+                }
+
 
                 <div class="product-grid row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
 
@@ -99,11 +107,21 @@
 
             </div>
         </div>
+        @if (isAdmin)
+        {
+            <p>
+                <a asp-action="Create" class="btn btn-primary mb-3">+ Add Product</a>
+            </p>
+        }
         <div class="row">
             <div class="col-md-12">
 
                 <div class="products-carousel swiper">
+                   
+
                     <div class="swiper-wrapper">
+                        
+
 
                         @foreach (var item in Model)
                         {
@@ -138,6 +156,14 @@
                                                 </svg>
                                             </span>
                                         </div>
+                                        <div class="btnsFromMe">
+                                            @if (isAdmin)
+                                            {
+                                                <a asp-action="Edit" asp-route-id="@prod.ProuductId" class="btn Edit text-white ">Edit</a>
+                                                <a asp-action="Details" asp-route-id="@prod.ProuductId" class="btn Details text-white">Details</a>
+                                                <a asp-action="Delete" asp-route-id="@prod.ProuductId" class="btn Delete text-white ">Delete</a>
+                                            }
+                                        </div>
                                     </div>
                                 </div>
                             }
@@ -146,67 +172,7 @@
 
 
 
-                        <div class="swiper-slide">
-                            <div class="product-item">
-                                <figure>
-                                    <a href="/ecommerce-product-page-html-css-javascript-main/product5.html" title="Product Title">
-                                        <img src="~/images/product-thumb-6.png" alt="Product Thumbnail" class="img-fluid">
-                                    </a>
-                                </figure>
-                                <p>Super Shoes</p>
-                                <div class="d-flex justify-content-between">
-                                    <p><span class="text-dark">$18.00</span><del>$23</del><span class="text-success">-30%</span></p>
-                                    <span class="d-flex">
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="product-item">
-                                <figure>
-                                    <a href="/ecommerce-product-page-html-css-javascript-main/product6.html" title="Product Title">
-                                        <img src="~/images/product-thumb-7.png" alt="Product Thumbnail" class="img-fluid">
-                                    </a>
-                                </figure>
-                                <p>Super Shoes</p>
-                                <div class="d-flex justify-content-between">
-                                    <p><span class="text-dark">$18.00</span><del>$23</del><span class="text-success">-30%</span></p>
-                                    <span class="d-flex">
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                        <svg width="18" height="18" class="text-warning">
-                                            <use xlink:href="#star-solid"></use>
-                                        </svg>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
